# ladon

./: .gitignore  requirements.txt  setup.cfg
backend/: requirements.txt  setup.cfg  setup.py
backend/etc/: development.conf
backend/ladon/fe/: app.py  cmd.py  decor.py
backend/ladon/fe/bll/: base.py  stree.py
backend/ladon/fe/v1/: index.py  stree.py
backend/ladon/gs/: app.py  cmd.py
backend/ladon/util/: __init__.py  search.py
etc/: development.conf
frontend/: package-lock.json
frontend/src/: App.vue
frontend/src/components/: Admin.vue  Help.vue  Home.vue  Privilege.vue  SInfo.vue  STree.vue
frontend/src/components/index/: STree.vue
frontend/src/components/other/: Admin.vue  Help.vue
frontend/src/router/: index.js
stree-ui/: package.json
stree-ui/src/: main.js
stree-ui/src/components/other/: Privilege.vue
stree/db/: init.sql  model.py
stree/fe/: app.py  cmd.py  decor.py
stree/fe/bll/: base.py  index.py  stree.py
stree/fe/v1/: stree.py
stree/gs/: app.py  cmd.py
