[metadata]
name = stree
author = yangjinlong
author-email = yangjinlong
summary = stree application
license = ops
classifier =
    Development Status :: 1 - Planning
    Enviroment :: Web Enviroment
    Framework :: Flask
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
package=
    stree

[entry_points]
console_scripts =
    stree-fe = stree.fe.cmd:stree_fe
    stree-gs = stree.gs.cmd:stree_gs
