[metadata]
name = ladon
author = yangjinlong
author-email = yangjinlong
summary = stree application
license = ops
classifier =
    Development Status :: 1 - Planning
    Enviroment :: Web Enviroment
    Framework :: Flask
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
package=
    ladon

[entry_points]
console_scripts =
    ladon-fe = ladon.fe.cmd:ladon_fe
    ladon-gs = ladon.gs.cmd:ladon_gs
